@@ -66,9 +66,10 @@
 #include <float.h>
 #include <math.h>
 
-// for analysing the algorithm:
+#ifdef CERF_INTROSPECT
 EXPORT int cerf_algorithm;
 EXPORT int cerf_nofterms;
+#endif
 
 /******************************************************************************/
 /*  auxiliary functions                                                       */
@@ -153,19 +154,25 @@ static const double expa2n2[] = {
 /******************************************************************************/
 
 _cerf_cmplx w_of_z(_cerf_cmplx z) {
+#ifdef CERF_INTROSPECT
   cerf_algorithm = -1;
   cerf_nofterms = 0;
+#endif
 
   // Steven G. Johnson, October 2012.
 
   if (creal(z) == 0.0) {
+#ifdef CERF_INTROSPECT
     cerf_algorithm = 400;
+#endif
     // Purely imaginary input, purely real output.
     // However, use creal(z) to give correct sign of 0 in cimag(w).
     return C(erfcx(cimag(z)), creal(z));
   }
   if (cimag(z) == 0) {
+#ifdef CERF_INTROSPECT
     cerf_algorithm = 500;
+#endif
     // Purely real input, complex output.
     // Avoid floating underflow for real term of large z.
     const double Wreal = fabs(creal(z)) > 27. ? 0. : exp(-sqr(creal(z)));
@@ -193,8 +200,6 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
                     algorithm 816 in this region: */
                  && (ya > 0.1 || (x > 8 && ya > 1e-10) || x > 28))) {
 
-    cerf_algorithm = 100;
-
     /* Poppe & Wijers suggest using a number of terms
        nu = 3 + 1442 / (26*rho + 77)
        where rho = sqrt((x/x0)^2 + (y/y0)^2) where x0=6.3, y0=4.4.
@@ -211,28 +216,37 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
       if (x + ya > 1e7) {                     // nu == 1, w(z) = i/sqrt(pi) / z
         // scale to avoid overflow
         if (x > ya) {
-          cerf_algorithm += 1;
+#ifdef CERF_INTROSPECT
+          cerf_algorithm = 101;
+#endif
           double yax = ya / xs;
-          cerf_algorithm = 100;
           double denom = ispi / (xs + yax * ya);
           ret = C(denom * yax, denom);
         } else if (isinf(ya)) {
-          cerf_algorithm += 2;
+#ifdef CERF_INTROSPECT
+          cerf_algorithm = 102;
+#endif
           return ((isnan(x) || y < 0) ? C(NaN, NaN) : C(0, 0));
         } else {
-          cerf_algorithm += 3;
+#ifdef CERF_INTROSPECT
+          cerf_algorithm= 103;
+#endif
           double xya = xs / ya;
           double denom = ispi / (xya * xs + ya);
           ret = C(denom, denom * xya);
         }
       } else { // nu == 2, w(z) = i/sqrt(pi) * z / (z*z - 0.5)
-        cerf_algorithm += 4;
+#ifdef CERF_INTROSPECT
+        cerf_algorithm = 104;
+#endif
         double dr = xs * xs - ya * ya - 0.5, di = 2 * xs * ya;
         double denom = ispi / (dr * dr + di * di);
         ret = C(denom * (xs * di - ya * dr), denom * (xs * dr + ya * di));
       }
     } else { // compute nu(z) estimate and do general continued fraction
-      cerf_algorithm += 5;
+#ifdef CERF_INTROSPECT
+      cerf_algorithm = 105;
+#endif
       const double c0 = 3.9, c1 = 11.398, c2 = 0.08254, c3 = 0.1421,
                    c4 = 0.2023; // fit
       double nu = floor(c0 + c1 / (c2 * x + c3 * ya + c4));
@@ -249,7 +263,9 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
       }
     }
     if (y < 0) {
+#ifdef CERF_INTROSPECT
       cerf_algorithm += 10;
+#endif
       // use w(z) = 2.0*exp(-z*z) - w(-z),
       // but be careful of overflow in exp(-z*z)
       //                                = exp(-(xs*xs-ya*ya) -2*i*xs*ya)
@@ -272,19 +288,21 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
      below.  Therefore, we use x < 10 here. */
   else if (x < 10) {
 
-    cerf_algorithm = 200;
-
     double prod2ax = 1, prodm2ax = 1;
     double expx2;
 
     if (isnan(y)) {
-      cerf_algorithm += 99;
+#ifdef CERF_INTROSPECT
+      cerf_algorithm = 299;
+#endif
       return C(y, y);
     }
 
     if (x < 5e-4) { // compute sum4 and sum5 together as sum5-sum4
                     // This special case is needed for accuracy.
-      cerf_algorithm += 1;
+#ifdef CERF_INTROSPECT
+      cerf_algorithm = 201;
+#endif
       const double x2 = x * x;
       expx2 = 1 - x2 * (1 - 0.5 * x2); // exp(-x*x) via Taylor
       // compute exp(2*a*x) and exp(-2*a*x) via Taylor, to double precision
@@ -306,12 +324,16 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
 
         // test convergence via sum3
         if (coef * prod2ax < relerr * sum3) {
+#ifdef CERF_INTROSPECT
           cerf_nofterms = n;
+#endif
           break;
         }
       }
     } else { // x > 5e-4, compute sum4 and sum5 separately
-      cerf_algorithm += 2;
+#ifdef CERF_INTROSPECT
+      cerf_algorithm = 202;
+#endif
       expx2 = exp(-x * x);
       const double exp2ax = exp((2 * a) * x), expm2ax = 1 / exp2ax;
       for (int n = 1;; ++n) {
@@ -325,7 +347,9 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
         sum5 += (coef * prod2ax) * (a * n);
         // test convergence via sum5, since this sum has the slowest decay
         if ((coef * prod2ax) * (a * n) < relerr * sum5) {
+#ifdef CERF_INTROSPECT
           cerf_nofterms = n;
+#endif
           break;
         }
       }
@@ -335,12 +359,16 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
             ? expx2 * erfcx(y)
             : 2 * exp(y * y - x * x);
     if (y > 5) { // imaginary terms cancel
+#ifdef CERF_INTROSPECT
       cerf_algorithm += 10;
+#endif
       const double sinxy = sin(x * y);
       ret = (expx2erfcxy - c * y * sum1) * cos(2 * x * y) +
             (c * x * expx2) * sinxy * sinc(x * y, sinxy);
     } else {
+#ifdef CERF_INTROSPECT
       cerf_algorithm += 20;
+#endif
       double xs = creal(z);
       const double sinxy = sin(xs * y);
       const double sin2xy = sin(2 * xs * y), cos2xy = cos(2 * xs * y);
@@ -351,7 +379,9 @@ _cerf_cmplx w_of_z(_cerf_cmplx z) {
     }
   } else { // x large: only sum3 & sum5 contribute (see above note)
 
+#ifdef CERF_INTROSPECT
     cerf_algorithm = 300;
+#endif
 
     if (isnan(x))
       return C(x, x);
